<resources>
    <string name="app_name">Nasapp</string>
    <string name="login">Sign In!</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter your Email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="signup">Sign Up!</string>
    <string name="register">No account yet? Sign up</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="download_data">Download Data</string>
    <string name="asteroid_detail">AsteroidDetailActivity</string>
</resources>