<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idWelcomeBack"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:text="Welcome back!"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEmailSignIn"
        android:layout_below="@id/idWelcomeBack"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:padding="5dp"
        android:text="Email address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEdtEmail"
        android:layout_below="@id/idEmailSignIn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idPasswordSignIn"
        android:layout_below="@id/idEdtEmail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="5dp"
        android:text="Password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEdtPassword"
        android:layout_below="@id/idPasswordSignIn"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEdtBtnLogin"
        android:layout_below="@id/idEdtPassword"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/idBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEdtBtnLogin"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="141dp"
        android:text="@string/register" />



</RelativeLayout>