<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/idSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:text="Create new account"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/idFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idSignUp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:padding="5dp"
        android:text="Full name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:id="@+id/idEdtFullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/idFullName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idEmailSignUp"
        android:layout_below="@id/idEdtFullName"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:padding="5dp"
        android:text="Email address"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/idEdtEmailSignUp"
        android:layout_below="@id/idEmailSignUp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idPasswordSignUp"
        android:layout_below="@id/idEdtEmailSignUp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:padding="5dp"
        android:text="Create password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/idEdtPasswordSignUp"
        android:layout_below="@id/idPasswordSignUp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idBtnSignUp"
        android:layout_below="@id/idEdtPasswordSignUp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/signup" />


</RelativeLayout>